Update 20181230_hive_install.md